--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
+    "popper.js": "^1.14.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
