--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
     "bootstrap": "^4.1.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "jwt-decode": "^2.2.0",
     "popper.js": "^1.14.3",
